<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.lentatyka.domerwarehouse.domain.main.product.ProductDomain" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_article_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{product.name}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_article"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_article"
            tools:text="BP-1045" />

        <TextView
            android:id="@+id/tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/color"
            app:layout_constraintStart_toStartOf="@+id/tv_article"
            app:layout_constraintTop_toBottomOf="@+id/tv_article" />

        <TextView
            android:id="@+id/tv_color_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{product.color}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_color"
            app:layout_constraintEnd_toEndOf="@+id/tv_article_name"
            app:layout_constraintTop_toTopOf="@+id/tv_color"
            tools:text="GREEN" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="@+id/tv_article"
            app:layout_constraintTop_toBottomOf="@+id/tv_color" />

        <TextView
            android:id="@+id/tv_size_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{product.size}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_size"
            app:layout_constraintEnd_toEndOf="@+id/tv_article_name"
            app:layout_constraintTop_toTopOf="@+id/tv_size"
            tools:text="60*100/2" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/tv_article"
            app:layout_constraintTop_toBottomOf="@+id/tv_size" />

        <TextView
            android:id="@+id/tv_address_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{product.address[0]}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_address"
            app:layout_constraintEnd_toEndOf="@+id/tv_article_name"
            app:layout_constraintTop_toTopOf="@+id/tv_address"
            tools:text="XX-4-2-1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>