<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.lentatyka.domerwarehouse.presentation.login.LoginViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".presentation.login.RegistrationFragment"
android:layout_marginStart="8dp"
android:layout_marginEnd="8dp">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/layout_email"
    android:layout_width="match_parent"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintVertical_chainStyle="packed"
    android:layout_marginBottom="16dp"
    android:layout_height="64dp"
    android:hint="@string/hint_email"
    app:endIconMode="clear_text"
    app:helperTextEnabled="true"
    app:helperText="@{viewmodel.emailError}"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/layout_password"
    app:startIconDrawable="@drawable/ic_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:singleLine="true" />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/layout_password"
    android:layout_width="match_parent"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_height="64dp"
    android:layout_marginBottom="16dp"
    android:hint="@string/hint_password"
    app:helperTextEnabled="true"
    app:helperText="@{viewmodel.passwordError}"
    app:endIconMode="password_toggle"
    app:layout_constraintBottom_toTopOf="@+id/layout_confirm_password"
    app:layout_constraintTop_toBottomOf="@id/layout_email"
    app:startIconDrawable="@drawable/ic_password">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:singleLine="true" />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_password"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_confirm_password"
        app:helperTextEnabled="true"
        app:helperText="@{viewmodel.confirmPasswordError}"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/btn_log_in"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/btn_log_in"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/sign_up"
    android:onClick="@{()->viewmodel.signUp(etEmail.getText().toString(), etPassword.getText().toString(), etConfirmPassword.getText().toString())}"
    app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>