<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lentatyka.domerwarehouse.presentation.login.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context=".presentation.login.SignUpFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_email"
            app:endIconMode="clear_text"
            app:error="@{viewmodel.emailError ? @string/bad_email : null }"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/layout_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                app:onFocusChangeListener="@{viewmodel.emailFocusChangeListener}"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:error="@{viewmodel.passwordError ? @string/empty_password : null}"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/layout_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                app:onFocusChangeListener="@{viewmodel.passwordFocusChangeListener}"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_confirm_password"
            app:endIconMode="password_toggle"
            app:error="@{viewmodel.confirmPasswordError ? @string/bad_confirm_password : null}"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_log_in"
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:onFocusChangeListener="@{viewmodel.confirmPasswordFocusChangeListener}"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{()->viewmodel.signUp(etEmail.getText().toString(), etPassword.getText().toString(), etConfirmPassword.getText().toString())}"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>